Getting started help

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,4 @@
-- sidebar = yield :sidebar
+- sidebar = render(:partial => 'shared/getting_started') + (yield(:sidebar) || '')
 
 !!! Strict
 %html{ :xmlns => 'http://www.w3.org/1999/xhtml', :lang => "en" }
