--- a/app/views/matches/show.html.haml
+++ b/app/views/matches/show.html.haml
@@ -33,10 +33,10 @@
 #comments
   - @comments.each_with_index do |comment, index|
     .comment{ :class => cycle('even', 'odd') }
-      .mugshot= link_to image_tag(comment.user.mugshot.public_filename(:thumb), :alt => comment.user.name), user_path(comment.user) if comment.user.mugshot
+      .mugshot= link_to image_tag(comment.user.mugshot.public_filename(:thumb), :alt => comment.user.name), game_user_path(@match.game_id, comment.user) if comment.user.mugshot
       .info
         %span.index= '#' + (index + 1).to_s + '&nbsp;'
-        %span.user= link_to(h(comment.user.name), comment.user) + '&nbsp;'
+        %span.user= link_to(h(comment.user.name), game_user_path(@match.game_id, comment.user)) + '&nbsp;'
         - if @match.winner.memberships.collect(&:user_id).include?(comment.user_id)
           %span.medal= image_tag('icons/medal_gold_2.png', :class => 'winner') + '&nbsp;'
         %span.time= time_ago_in_words(comment.created_at) + ' ago'
