--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -726,6 +726,29 @@ table.form
       :border-bottom 1px solid #3399CC
       :margin-bottom 5px
       :color #FFFFFF
+      
+    #getting_started
+      :margin 0
+      :background-color #CFC
+      :border solid 1px #6C6
+      :padding 10px
+      :margin-bottom 1.5em
+      :color #000000
+      
+      .help
+        :margin-bottom 1em
+      
+      .step
+        :color #888888
+        
+        a
+          :color #888888
+          
+      .next
+        :color #000000
+
+        a
+          :color #000000
 
     #leader
       :padding 20px
