--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -846,6 +846,9 @@ table.form
         a
           :display block
           
+      .for_against
+        :margin-top 1.5em
+          
     #compare_users
       input
         :width auto
