--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -871,6 +871,7 @@ table.form
   :color #999999
   :text-align center
   :font-size 85%
+  :clear both
   
   a
     :color #999999
@@ -949,9 +950,27 @@ body.public
         :display block
         :font-size 11px
         :color #666666
+        
+  #login
+    input
+      :width 212px
+      
+    input.submit
+      :width 100%
+  
+    label
+      :padding-top 5px
 
   #news
     :color #666666
+    
+    .article
+      h3
+        a
+          :color #666666
+    
+      .date
+        :margin-bottom 1.5em
 
     .left
       .article
