--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -331,9 +331,22 @@ table.form {
   top: -4px; }
 #bd #logs .list {
   margin: 0;
-  padding: 5px;
   border-top: 1px solid #999999;
   border-bottom: 1px solid #999999; }
+  #bd #logs .list a {
+    display: block;
+    padding: 1px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-bottom: 1px dashed #CCCCCC; }
+    #bd #logs .list a img {
+      position: relative;
+      top: 2px;
+      vertical-align: top; }
+    #bd #logs .list a:hover {
+      background-color: #EEEEEE; }
+  #bd #logs .list .last a {
+    border-bottom: 0; }
 #bd #logs a:hover {
   text-decoration: none; }
 #bd #logs img {
