--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -3,10 +3,11 @@
     //:background url(lib/grid.png)
 
 a
-  :color #000000
+  :color #3589AF
   :text-decoration none
 
   &:hover
+    :color #3589AF
     :text-decoration underline
 
 img
