--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,7 +1,8 @@
 a {
-  color: #000000;
+  color: #3589AF;
   text-decoration: none; }
   a:hover {
+    color: #3589AF;
     text-decoration: underline; }
 
 img {
