Move switch game

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,6 +33,8 @@
                 #user_minimum= 'Add one more user'[:add_one_more_user]
               - else
                 #user_minimum= 'Add {users_needed} more users'[:add_x_more_ser, current_game.team_size * 2 - enabled_users.size]
+      
+      = render :partial => 'shared/submenu'
   
       - unless current_game.nil?
         #add_match_form.column.span-24{ :style => 'display: none' }
