--- a/app/views/shared/_current_game.html.haml
+++ b/app/views/shared/_current_game.html.haml
@@ -1,10 +1,12 @@
 %select{:id => 'current_game_id', :name => 'current_game[id]', :onchange => 'this.form.submit();'}
+  %option{ :selected => 'selected' }= '-- Switch game --'[]
+
   - if current_users_games[:played].size > 0
     %optgroup{:label => 'Your games'[]}
       - current_users_games[:played].each do |game|
-        %option{:value => game.id, :selected => current_game.id == game.id ? 'selected' : nil}= game.name
+        %option{:value => game.id}= h(game.name)
 
   - if current_users_games[:not_played].size > 0
     %optgroup{:label => 'Other games'[]}
       - current_users_games[:not_played].each do |game|
-        %option{:value => game.id, :selected => current_game.id == game.id ? 'selected' : nil}= game.name
+        %option{:value => game.id}= h(game.name)
