--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -106,6 +106,11 @@ textarea {
         color: #7C7C7C; }
     #menu ul li.admin {
       margin-left: 3em; }
+    #menu ul li.current_game {
+      margin-left: 1em;
+      background: none; }
+      #menu ul li.current_game select {
+        width: 150px; }
   #menu #login_form {
     display: none;
     font-size: 85%; }
@@ -115,6 +120,22 @@ textarea {
       width: 80px; }
     #menu #login_form .submit {
       margin-right: 0; }
+
+#submenu {
+  display: block;
+  margin: 0;
+  padding: 5px;
+  padding-left: 20px;
+  border-bottom: 1px solid #999999; }
+  #submenu li {
+    display: inline;
+    padding-right: 15px;
+    list-style: none; }
+    #submenu li a {
+      color: #000000;
+      font-weight: bold; }
+    #submenu li.current a {
+      text-decoration: underline; }
 
 #add_match_form {
   background-color: #EEEEEE;
