--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -165,11 +165,15 @@ textarea
     :list-style none
     
     a
-      :color #000000
+      :color #999999
       :font-weight bold
       
+      &:hover
+        :color #000000
+        :text-decoration none
+      
     &.current a
-      :text-decoration underline
+      :color #000000
       
 #add_match_form
   :background-color #EEEEEE
