--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -156,17 +156,19 @@ textarea
   :display block
   :margin 0
   :padding 5px
-  :padding-left 20px
+  :padding-left 12px
   :border-bottom 1px solid #999999
   
   li
     :display inline
-    :padding-right 15px
     :list-style none
     
     a
       :color #999999
       :font-weight bold
+      :padding 5px
+      :padding-left 8px
+      :padding-right 8px
       
       &:hover
         :color #000000
