--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -125,15 +125,17 @@ textarea {
   display: block;
   margin: 0;
   padding: 5px;
-  padding-left: 20px;
+  padding-left: 12px;
   border-bottom: 1px solid #999999; }
   #submenu li {
     display: inline;
-    padding-right: 15px;
     list-style: none; }
     #submenu li a {
       color: #999999;
-      font-weight: bold; }
+      font-weight: bold;
+      padding: 5px;
+      padding-left: 8px;
+      padding-right: 8px; }
       #submenu li a:hover {
         color: #000000;
         text-decoration: none; }
