Sort legend by player name

--- a/app/views/comparisons/index.html.haml
+++ b/app/views/comparisons/index.html.haml
@@ -8,10 +8,10 @@
       = submit_tag 'Update'[]
     
     .legend
-      - @selected_players.each_with_index do |player, index|
+      - @indexed_sorted_players.each do |isp|
         .player
-          %span.color{ :style => "background-color: #{colors[index]}" }
-          %span.name= link_to player.name, game_user_path(@game, player)
+          %span.color{ :style => "background-color: #{colors[isp.last]}" }
+          %span.name= link_to isp.first.name, game_user_path(@game, isp.first)
 
     = graph(formatted_game_comparison_url(current_game, @selected_player_ids.join('-'), :chart, :period => @time_period))
 - else
