Get jQuery from Google

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,4 +62,6 @@
             .content= sidebar
   
       .column.span-24= render :partial => 'shared/footer'
+    %script{ :src => 'http://www.google.com/jsapi' }
+    %script google.load("jquery", "1");
     = javascript_include_tag_merged
