Specify version 1.2 for jQuery

--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -47,4 +47,6 @@
           .content= sidebar
 
       = render :partial => 'shared/footer'
+    %script{ :src => 'http://www.google.com/jsapi' }
+    %script google.load("jquery", "1.2");
     = javascript_include_tag_merged
