--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -36,4 +36,6 @@
           .content= yield
 
       = render :partial => 'shared/footer'
+    %script{ :src => 'http://www.google.com/jsapi' }
+    %script google.load("jquery", "1.2");
     = javascript_include_tag_merged
