--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -1,7 +1,3 @@
-// Show grid background
-  //.container
-    //:background url(lib/grid.png)
-
 a
   :color #3589AF
   :text-decoration none
@@ -451,28 +447,10 @@ table.form
       :margin 0
       :border-top 1px solid #999999
       :border-bottom 1px solid #999999
+      :padding-top 2px
       
-      a
-        :display block
-        :padding 1px
-        :padding-left 5px
-        :padding-right 5px
-        :border-bottom 1px dashed #CCCCCC
-        
-        img
-          :position relative
-          :top 1px
-          :vertical-align top
-          
-        &:hover
-          :background-color #EEEEEE
-          
-      .last
-        a
-          :border-bottom 0
-  
-    a:hover
-      :text-decoration none
+      .log
+        :padding-bottom 2px
 
     img
       :margin 0
