Set type=text/javascript for javascript includes Use unique id for compare checkboxes

--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -21,7 +21,7 @@
     %tbody
       - game_participations.each_with_index do |game_participation, index|
         %tr{ :class => cycle('even', 'odd') }
-          %td= check_box_tag 'user[]', game_participation.user_id
+          %td= check_box_tag 'user[]', game_participation.user_id, false, :id => "compare_user_#{game_participation.user_id}"
           %td= index + start_at
           - if start_at == 1
             %td
