--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -58,7 +58,7 @@
             .content= sidebar
   
       .column.span-24= render :partial => 'shared/footer'
-    %script{ :src => 'http://www.google.com/jsapi' }
-    %script google.load("jquery", "1.2");
+    %script{ :type => 'text/javascript', :src => 'http://www.google.com/jsapi' }
+    = javascript_tag('google.load("jquery", "1.2");')
     = javascript_include_tag :all, :cache => true
     = render :partial => 'shared/feedback_tab'
