--- a/app/views/dashboard/_logs.html.haml
+++ b/app/views/dashboard/_logs.html.haml
@@ -4,7 +4,7 @@
   %h3= 'Events'[]
   .list
     - @logs.each do |log|
-      .log{ :class => log == @logs.last ? 'last' : nil }
+      %span.log{ :class => log == @logs.last ? 'last' : nil }
         = log_link log
         
 - content_for :head do
