--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -2,10 +2,10 @@
   .content
     = 'Copyright 2007-{this_year} by Lars Sehested'[:copyright, Date.today.year]
     = '&middot;'
-    = link_to 'Project home'[], 'http://scorekeepr.dk/', :target => '_blank'
+    = link_to 'Project home'[], 'http://scorekeepr.dk/'
     = '&middot;'
-    = link_to 'Issue tracker'[], 'http://code.google.com/p/scorekeeper/issues/list', :target => '_blank'
+    = link_to 'Issue tracker'[], 'http://code.google.com/p/scorekeeper/issues/list'
     = '&middot;'
-    = link_to 'Source code'[], 'http://github.com/larssg/score-keeper/tree/master', :target => '_blank'
+    = link_to 'Source code'[], 'http://github.com/larssg/score-keeper/tree/master'
 
 = render :partial => 'shared/google_analytics' unless Rails.env == 'development'
