--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,4 @@
-- sidebar = yield(:sidebar)
+- sidebar = render(:partial => 'shared/getting_started') + yield(:sidebar).to_s
 
 !!! Strict
 %html{ :xmlns => 'http://www.w3.org/1999/xhtml', :lang => "en" }
@@ -53,11 +53,9 @@
 
           #main= yield
 
-        - getting_started = render :partial => 'shared/getting_started'
-        - unless sidebar.blank? && getting_started.blank?
+        - unless sidebar.blank?
           #sidebar.column.span-6.last
             .content
-              = getting_started
               = sidebar
 
       .column.span-24= render :partial => 'shared/footer'
