--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -6,7 +6,7 @@
       - unless @page_title.blank?
         = ' - '
         = @page_title
-    = stylesheet_link_tag 'lib/reset', 'lib/typography', 'lib/grid', 'lib/forms', 'screen', :media => 'screen, projection'
+    = stylesheet_link_merged
     = stylesheet_link_tag 'print', :media => 'print'
     /[if IE]
       = stylesheet_link_tag 'lib/ie', :media => 'screen, projection'
@@ -32,6 +32,4 @@
           .content= yield
 
       = render :partial => 'shared/footer'
-    %script{ :src => 'http://www.google.com/jsapi' }
-    %script google.load("jquery", "1.2");
-    = javascript_include_tag_merged
+    = javascript_include_merged
