Remove feedback tab and move link to footer

--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -4,6 +4,8 @@
     = '&middot;'
     = link_to 'Project home'[], 'http://scorekeepr.dk/'
     = '&middot;'
+    = link_to 'Feedback'[], 'http://scorekeepr.uservoice.com/'
+    = '&middot;'
     = link_to 'Issue tracker'[], 'http://code.google.com/p/scorekeeper/issues/list'
     = '&middot;'
     = link_to 'Source code'[], 'http://github.com/larssg/score-keeper/tree/master'
