--- a/app/views/comparisons/index.html.haml
+++ b/app/views/comparisons/index.html.haml
@@ -15,7 +15,7 @@
 
     = graph(formatted_game_comparison_url(current_game, @selected_player_ids.join('-'), :chart, :period => @time_period))
 - else
-  #graph= 'Please select users to compare to the right.'[]
+  #graph= t('compare.select_users')
 
 - content_for :sidebar do
   - form_tag game_comparisons_path(@game), :method => :get, :id => 'compare_users' do
@@ -24,7 +24,4 @@
         = check_box_tag 'user[]', player.id, @selected_player_ids.include?(player.id), :id => "user_#{player.id}"
         = label_tag "user_#{player.id}", player.name
         
-    = submit_tag 'Compare'[]
-    
-- content_for :head do
-  = javascript_include_tag 'swfobject'
+    = submit_tag t('compare.compare')
