--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -6,19 +6,19 @@
   - if @filter
     #filter
       - if @filter.length > 1
-        = 'Showing matches for <b>{first}</b> and <b>{second}</b>'[:filter_by_two, h(@filter[0].display_name), h(@filter[1].display_name)]
+        = t('matches.matches_for_x_y').gsub('{first}', h(@filter[0].display_name)).gsub('{second}', h(@filter[1].display_name))
       - else
-        = 'Showing matches for <b>{first}</b>'[:filter_by_one, h(@filter[0].display_name)]
+        = t('matches.matches_for_x').gsub('{first}', h(@filter[0].display_name))
 
   #matches
     .list
       %table
         %tr
-          %th= 'Team one'[]
-          %th.score= 'Score'[]
-          %th= 'Team two'[]
+          %th= t('matches.team_one')
+          %th.score= t('matches.score')
+          %th= t('matches.team_two')
           %th &nbsp;
-          %th= 'Created'[]
+          %th= t('matches.created')
           %th &nbsp;
 
         - @matches.each do |match|
@@ -27,27 +27,27 @@
 
             %td
               = match.played_at.to_s :short
-              = ' by {user}'[:by_user, link_to(find_user(match.creator_id).login, game_user_path(current_game, find_user(match.creator_id)))] unless match.creator_id.nil?
+              = t('matches.by_user').gsub('{user}', link_to(find_user(match.creator_id).login, game_user_path(current_game, find_user(match.creator_id)))) unless match.creator_id.nil?
 
-            %td= link_to 'Delete', game_match_path(match.game_id, match), :method => :delete, :confirm => "Delete match. Are you sure?\n\nBe aware that deleting a match may take a while."[] if logged_in?
+            %td= link_to t('matches.delete'), game_match_path(match.game_id, match), :method => :delete, :confirm => t('matches.delete_match_warning') if logged_in?
 
   = will_paginate @matches
 
   #feeds
-    = link_to image_tag('rss.gif') + ' ' + 'Atom feed (all matches)'[], match_feed_url(current_game), :class => 'rss'
+    = link_to image_tag('rss.gif') + ' ' + t('matches.feeds.link_all'), match_feed_url(current_game), :class => 'rss'
     - unless params[:filter].blank?
-      = link_to image_tag('rss.gif') + ' ' + 'Atom feed (filtered)'[], match_feed_url(current_game, :filter => params[:filter]), :class => 'rss'
+      = link_to image_tag('rss.gif') + ' ' + t('matches.feeds.link_filtered'), match_feed_url(current_game, :filter => params[:filter]), :class => 'rss'
 
 - content_for :head do
   = auto_discovery_link_tag :atom, match_feed_url(current_game), :title => t('matches.feeds.all')
 
   - unless params[:filter].blank?
-    = auto_discovery_link_tag :atom, match_feed_url(current_game, :filter => params[:filter]), :title => 'Filtered'[]
+    = auto_discovery_link_tag :atom, match_feed_url(current_game, :filter => params[:filter]), :title => t('matches.feeds.filtered')
 
 - if @filter
   - content_for :sidebar do
-    %p= link_to 'Show all matches', game_matches_path(current_game), :class => 'clear'
+    %p= link_to t('matches.show_all_matches'), game_matches_path(current_game), :class => 'clear'
     - if @filter.length == 1
-      = link_to 'Show user details'[], game_user_path(current_game, @filter.first)
+      = link_to t('matches.show_user_details'), game_user_path(current_game, @filter.first)
     - elsif @filter.length > 1
-      %p= link_to image_tag('icons/chart_bar.png') + ' ' + 'Show team details'[], game_team_path(current_game, @filter.collect(&:id).join(','))
+      %p= link_to image_tag('icons/chart_bar.png') + ' ' + t('matches.show_team_details'), game_team_path(current_game, @filter.collect(&:id).join(','))
